apps/staging/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - n8n.christophervestman.com
      secretName: n8n-tls
  rules:
    - host: n8n.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  number: 80
            path: /
            pathType: Prefix
